#LMS-172 using hex-encoding for secretkey in LoginContext
git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DWOProject/DWO-LMS/DWO-commons-lib/trunk@19186 58dd2db4-0f11-0410-9df4-da15f00f50bd